--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+# 配置文件
+babel.config.js
+jsconfig.json
+package-lock.json
+package.json
+vue.config.js
