--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "element-ui": "^2.15.6",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
-    "": "^2.29.3",
+    "moment": "^2.29.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2",
