--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "dev":"vue-cli-service build --mode development"
+    "dev": "vue-cli-service build --mode development"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
@@ -15,6 +15,7 @@
     "element-ui": "^2.15.6",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "mockjs": "^1.1.0",
     "moment": "^2.29.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
